Update Api/Jwt
