# src/controllers/UsersController.js
@@ -2,23 +2,15 @@ const HttpController = require('./HttpController');
 
 class UsersController extends HttpController {
     configureRoutes(baseUrl){
-        this.express.post(`${baseUrl}/users`, this.login.bind(this));
+        this.express.post(`${baseUrl}/users`, this.register.bind(this));
     }
 
-    login(req, res){
+    register(req, res){
+        const dataUser = req.body;
 
-    const body = req.body;
-
-     if (!body || !body.login || !body.password){
-        return res.status(400).json({
-            status: 400,
-            error: 'Parâmetros de entrada inválidos.'
-        })
-     }
-
-        res.json({
-            token: 'token gerado pela api'
-        })
+        req.logger.info('Usuário cadastrado com sucesso');
+        res.json(dataUser);
+     
     }
 }
 
